--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="solovino">
-            <h3 style="font-size: xx-large;">El solovino</h3>
+            <h3 style="font-size: xx-large;">La gorda</h3>
             <a href="https://www.uamproyectos.xyz/patita/gorda/">
                 <video src="caminata.mp4" alt="Video de solovino" width="100%" height="auto" muted autoplay loop></video>
             </a>
